@@ -724,6 +724,11 @@ else
         Q=@
   export SILENT=1
 endif
+ifdef BLACKLIST
+  # to allow blacklist to take effect if defined
+  # inside a BOARD.py file
+  export BLACKLIST
+endif
 
 # =============================================================================
 # =============================================================================
