@@ -58,10 +58,15 @@
 #define APP_TIMER_ENABLED 1
 #define APP_UART_ENABLED 1
 
+#ifndef NRF51_SERIES
+// Do not include these for NRF51
+#define BLE_HIDS_ENABLED 1
+#define PEER_MANAGER_ENABLED 1
+#endif
+
 #define BLE_ADVERTISING_ENABLED 1
 //#define BLE_ANCS_C_ENABLED 0
 #define BLE_DB_DISCOVERY_ENABLED 1
-#define BLE_HIDS_ENABLED 1
 #define BLE_NUS_ENABLED 1
 
 #define CLOCK_ENABLED 1
@@ -87,7 +92,7 @@
 
 #define NFC_NDEF_MSG_ENABLED 1
 #define NRF_QUEUE_ENABLED 1
-#define PEER_MANAGER_ENABLED 1
+
 
 #define GPIOTE_ENABLED 1
 //#define GPIOTE_CONFIG_IRQ_PRIORITY 6
